--- a/index.html
+++ b/index.html
@@ -1,65 +1,183 @@
 <!doctype html>
 <html lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="renderer" content="webkit">
 <title>Arts, Crafts &amp; Sewing-zlalaa</title>
+<meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/c.css">
-<header>
-  <a href="https://zalalaa.com">
-    <div><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<h2>Appliques & Decorative Patches</h2>
-<h4>Zalalaa Committed to garment accessories lace design, production and sales.</h4>
-<p>The main products are: water soluble (<b>milk silk, polyester light, cotton embroidery fabric and lace</b>), bead embroidery, towel embroidery, chiffon, lace, etc.Fashion and high quality lace make customers extraordinary. </p>
-<div class="social-proof">
-  <h2>Applique Patches</h2>
+<meta name="theme-color" content="#32CD32">
+<link rel="stylesheet" href="/q/p.min.css">
+<link rel="stylesheet" href="/q/p.css">
+<script src="https://cdn.jsdelivr.net/gh/jquery/jquery@3.4.1/dist/jquery.min.js"></script>
+<script src="/q/pj.min.js"></script>
+</head>
+<body>
+<div class="navbar shadow" id="navbar">
+  <a class="navbar-logo size-big" href="https://zalalaa.com"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <div class="navbar-body" id="navbody">
+    <ul class="nav">
+      <li><a href="https://zalalaa.com" title="Home">Home</a></li>
+      <li><a href="/q/abouts/" title="About Us">About Us</a></li>
+      <li><a href="/q/patches/" title="Applique Patches">Applique Patches</a></li>
+      <li><a href="/q/article/" title="Blog">Blog</a></li>
+      <li><a href="/q/video/" title="Video">Video</a></li>
+      <li><a href="/q/contact/" title="Contact Us">Contact Us</a></li>
+    </ul>
+  </div>
+  <ul class="nav nav-switch size-mini" data-navswitch="#navbody"><li></li><li></li><li></li></ul>
 </div>
-<div class="grid">
-	
-    <a href="/q/18.html" title="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57"><img src="/q/upload/other/20240626/1719391194190860.webp" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57"><p>Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing $:12.99</p></a><br />
-	
-    <a href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26"><img src="/q/upload/other/20240626/1719391022657043.webp" alt="Skull cloth patch,2024-06-10 21:33:26"><p>Skull cloth patch Skull cloth patch $:12</p></a><br />
-	
-    <a href="/q/13.html" title="Embroidery flower bud lace flower applique,2024-06-10 21:33:15"><img src="/q/upload/other/20240626/1719390770601289.webp" alt="Embroidery flower bud lace flower applique,2024-06-10 21:33:15"><p>Embroidery flower bud lace flower applique Embroidery flower bud lace flower applique $:13.99</p></a><br />
-	
-    <a href="/q/11.html" title="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05"><img src="/q/upload/other/20240626/1719389747296309.webp" alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05"><p>Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace $:9.99</p></a><br />
-	
-    <a href="/q/22.html" title="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35"><img src="/q/upload/other/20240626/1719390299785042.webp" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35"><p>Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set $:12</p></a><br />
-	
-    <a href="/q/21.html" title="Tiger head Embroiderye sticker,2024-06-02 18:42:38"><img src="/q/upload/other/20240626/1719390626901068.webp" alt="Tiger head Embroiderye sticker,2024-06-02 18:42:38"><p>Tiger head Embroiderye sticker Tiger head Embroiderye sticker $:12</p></a><br />
-	
-    <a href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2018-04-12 10:23:07"><img src="https://p.upyun.com/demo/tmp/eE4AC71d.webp" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2018-04-12 10:23:07"><p>Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories $:12.99</p></a><br />
-	
-    <a href="/q/9.html" title="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2018-04-12 10:11:20"><img src="https://p.upyun.com/demo/tmp/GhctPHiT.webp" alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2018-04-12 10:11:20"><p>Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product $:9.99</p></a><br />
-	
+<script>
+  $(function(){
+    $("#navbar").auto({
+      "0":{"class":"navbar shadow"},
+      "1024":{"class":"navbar navbar-head navbar-show shadow"},
+    });
+  })
+</script>
+<br />
+<div class="flip" id="flip">
+  <div class="flip-body">
+    <a class="flip-item align-center" href="https://zalalaa.com">
+      <picture>
+        <source media="(max-width: 1279px)" srcset="/q/b1ss.webp">
+        <source media="(min-width: 1280px)" srcset="/q/b1.webp">
+        <img src="/q/b1.webp" class="img-auto" alt="zalalaa" />
+      </picture>
+    </a>
+	    <a class="flip-item align-center" href="https://zalalaa.com">
+      <picture>
+        <source media="(max-width: 1279px)" srcset="/q/b2ss.webp">
+        <source media="(min-width: 1280px)" srcset="/q/b2.webp">
+        <img src="/q/b2.webp" class="img-auto" alt="zalalaa" />
+      </picture>
+    </a>
   </div>
-<h3>Help</h3><ul>
-<li><a href="/q/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00"><p>Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</p></a></li><li><a href="/q/8.html" title="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.,2018-04-12 10:10:18"><p>Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</p></a></li></ul>
-<h3>Video</h3><ul>
-<li><a href="/q/14.html" title="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.,2018-04-12 10:26:28"><p>Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.</p></a></li></ul>
+  <div class="flip-prev text-white" id="flip-prev"></div>
+  <div class="flip-next text-white" id="flip-next"></div>
+</div>
+<script>
+  $(function(){
+    $('#flip').flip({
+      "autoplay":true,
+      "page":true,
+      "prev":"#flip-prev",
+      "next":"#flip-next",
+      "toggle":{"class":"nav nav-turn nav-turn-dot nav-turn-line","active":"active text-warning"}
+    });
+  });
+</script>
 
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="https://zalalaa.com">Home</a>
-        <a href="/q/abouts/">About Us</a>
-        <a href="/q/patches/">Applique Patches</a>
-        <a href="/q/article/">Blog</a>
-        <a href="/q/video/">Video</a>
-        <a href="/q/contact/">Contact Us</a>
-      </div>
-    </nav>
+<div class="layout grid-middle big-grid-middle large-grid-large bg isplit-full scrollto">
+  <h3 class="margin-bottom-mini weight" align="center">About</h3>
+     <p align="center"> Appliques & Decorative Patches</p>
+<p align="text-gray size-mini">Zalalaa Committed to garment accessories lace design, production and sales. The main products are: water soluble (milk silk, polyester light, cotton embroidery fabric and lace), bead embroidery, towel embroidery, chiffon, lace, etc.Fashion and high quality lace make customers extraordinary.</p>
+    <div class="grid big-grid-middle large-grid-large isplit-content">
+
+    <div class="big-x12 grid discovers">
+      <a class="big-x3 flex flex-column" href="/q/18.html" title="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719391194190860.webp" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+		<strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
+        <p class="flex-grow">Colorful Embroidered Lace Neck···<br /><span class="text-main">Read More</span></p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719391022657043.webp" alt="Skull cloth patch,2024-06-10 21:33:26" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+		<strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
+        <p class="flex-grow">Skull cloth patch<br /><span class="text-main">Read More</span></p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/13.html" title="Embroidery flower bud lace flower applique,2024-06-10 21:33:15">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390770601289.webp" alt="Embroidery flower bud lace flower applique,2024-06-10 21:33:15" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+		<strong class="weight-small"><span class="text-danger">&#36;</span>:13.99</strong>
+        <p class="flex-grow">Embroidery flower bud lace flo···<br /><span class="text-main">Read More</span></p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/11.html" title="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719389747296309.webp" alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+		<strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
+        <p class="flex-grow">Red, white and black car bone ···<br /><span class="text-main">Read More</span></p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/22.html" title="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390299785042.webp" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+		<strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
+        <p class="flex-grow">Clothing accessories, embroide···<br /><span class="text-main">Read More</span></p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/21.html" title="Tiger head Embroiderye sticker,2024-06-02 18:42:38">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390626901068.webp" alt="Tiger head Embroiderye sticker,2024-06-02 18:42:38" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+		<strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
+        <p class="flex-grow">Tiger head Embroiderye sticker<br /><span class="text-main">Read More</span></p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/16.html" title="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2018-04-12 10:37:31">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/KJPQMQdm.webp" alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2018-04-12 10:37:31" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+		<strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
+        <p class="flex-grow">Embroidered lace cover, floral···<br /><span class="text-main">Read More</span></p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/15.html" title="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2018-04-12 10:34:24">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://p.upyun.com/demo/tmp/tDqu761P.webp" alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2018-04-12 10:34:24" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+		<strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
+        <p class="flex-grow">Embroidered water-soluble lace···<br /><span class="text-main">Read More</span></p>
+      </a>
+    </div>
   </div>
-</aside>
-<footer>
-  Made in <a href="https://zalalaa.com">Zalalaa.com</a>
-</footer>
+  
+  
+
+  
+</div>
+
+
+
+
+
+<div class="layout grid-large isplit scrollto"> 
+  <div class="grid documents">
+    <a class="big-x4" href="/q/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00">
+      <strong>Chinese embroidery with a long history has been an important···</strong>
+      <p>Chinese embroidery with a long history has been an important part of··· <sup>2018-04-12</sup><br />Read More</p>
+    </a>
+    <a class="big-x4" href="/q/8.html" title="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.,2018-04-12 10:10:18">
+      <strong>Chinese embroidery has four major traditional styles: Su, Sh···</strong>
+      <p>Chinese embroidery has four major traditional styles: Su, Shu, Xiang··· <sup>2018-04-12</sup><br />Read More</p>
+    </a>
+  </div>
+</div>
+<div class="layout grid-large isplit scrollto">
+    <h3></h3>
+  <p align="center"> </p>
+  <div class="grid documents">
+    <a class="big-x4" href="/q/14.html" title="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.,2018-04-12 10:26:28">
+      <strong>Chinese traditional embroidery craft, arts and culture in a unique ancie···<sup>2018-04-12</sup><br />Read More</strong>
+    </a>
+  </div>
+</div>
+
+<div class="layout padding-top-large padding-bottom-large padding-left padding-right">
+  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>  
+</div>
+<script src="https://instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>
 </body>
 </html>
