--- a/q/8.html
+++ b/q/8.html
@@ -1,50 +1,81 @@
 <!doctype html>
 <html lang="en">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="renderer" content="webkit">
 <title>Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.-Order dynamics-Arts, Crafts &amp; Sewing-zlalaa</title>
+<meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/c.css">
-<header>
-  <a href="https://zalalaa.com">
-    <div><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<p><a href="/">Home</a> >> <a href="/q/article/">Blog</a> >> <a href="/q/order/">Order dynamics</a></p>
-<h2>Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</h2>
-<time>2018-04-12</time>
-<div class="grid">
-<img src="/q/upload/image/20231224/1703425271933476.jpg" alt="[content::title],[content::date]">
-  <p>Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</p>
-   
-</div>
-<p><a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
-<p><a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
-<h3>Help</h3><ul>
-<li><a href="/q/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00"><p>Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</p></a></li><li><a href="/q/8.html" title="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.,2018-04-12 10:10:18"><p>Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</p></a></li></ul>
-<h3>Video</h3><ul>
-<li><a href="/q/14.html" title="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.,2018-04-12 10:26:28"><p>Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.</p></a></li></ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="https://zalalaa.com">Home</a>
-        <a href="/q/abouts/">About Us</a>
-        <a href="/q/patches/">Applique Patches</a>
-        <a href="/q/article/">Blog</a>
-        <a href="/q/video/">Video</a>
-        <a href="/q/contact/">Contact Us</a>
-      </div>
-    </nav>
+<meta name="theme-color" content="#32CD32">
+<meta property="og:type" content="article"/>
+<meta property="og:release_date" content="2018-04-12 10:10:18"/>
+<link rel="stylesheet" href="/q/p.min.css">
+<link rel="stylesheet" href="/q/p.css">
+<script src="/q/j.min.js"></script>
+<script src="/q/pj.min.js"></script>
+</head>
+<body>
+<div class="navbar shadow" id="navbar">
+  <a class="navbar-logo size-big" href="https://zalalaa.com"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <div class="navbar-body" id="navbody">
+    <ul class="nav">
+      <li><a href="https://zalalaa.com" title="Home">Home</a></li>
+      <li><a href="/q/abouts/" title="About Us">About Us</a></li>
+      <li><a href="/q/patches/" title="Applique Patches">Applique Patches</a></li>
+      <li><a href="/q/article/" title="Blog">Blog</a></li>
+      <li><a href="/q/video/" title="Video">Video</a></li>
+      <li><a href="/q/contact/" title="Contact Us">Contact Us</a></li>
+    </ul>
   </div>
-</aside>
-<footer>
-  Made in <a href="https://zalalaa.com">Zalalaa.com</a>
-</footer>
+  <ul class="nav nav-switch size-mini" data-navswitch="#navbody"><li></li><li></li><li></li></ul>
+</div>
+<script>
+  $(function(){
+    $("#navbar").auto({
+      "0":{"class":"navbar shadow"},
+      "1024":{"class":"navbar navbar-head navbar-show shadow"},
+    });
+  })
+</script>
+<br />
+
+<div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
+  <h1 class="margin-bottom weight" align="center">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</h1>
+   <ul class="bread">
+     <a href="/"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/article/">Blog</a> <i class="icon-arrow-right"></i> <a href="/q/order/">Order dynamics</a> <i class="icon-arrow-right"></i> <a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a>
+     </ul> 
+    <div class="grid big-grid-middle large-grid-large isplit-content">
+    <div class="big-x4">
+      <a class="padding block text-white discovers-main" href=" ">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big">
+              <img loading="lazy" src="/q/upload/image/20231224/1703425271933476.jpg" class="img-auto scale" /></figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.<sup> </sup></strong>
+        <p class="size-small"></p>
+        </a>
+    </div>
+    <div class="big-x8">
+        <time>2018-04-12</time>
+  <p>Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</p>
+
+  </div> 
+  </div>
+  
+  <div class="grid big-grid-middle large-grid-large isplit-content">
+
+    <div class="big-x12 grid discovers">
+    </div>
+  </div>
+<p>Previous：<a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
+<p>Next：<a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
+</div>
+<div class="layout padding-top-large padding-bottom-large padding-left padding-right">
+  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>  
+</div>
+<script src="https://instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>
 </body>
 </html>
