--- a/q/job/index.html
+++ b/q/job/index.html
@@ -1,49 +1,64 @@
 <!doctype html>
 <html lang="en">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="renderer" content="webkit">
 <title>招贤纳士-Arts, Crafts &amp; Sewing-zlalaa</title>
+<meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/c.css">
-<header>
-  <a href="https://zalalaa.com">
-    <div><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<h2>招贤纳士</h2>
-<h4>诚聘优秀人士加入我们的团队</h4>
-<p>Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.</p>
-<div class="social-proof">
-  <h2>招贤纳士</h2>
-</div>
-<div bys="grid">
-
-</div>
-<h3>Help</h3><ul>
-<li><a href="/q/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00"><p>Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</p></a></li><li><a href="/q/8.html" title="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.,2018-04-12 10:10:18"><p>Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</p></a></li></ul>
-<h3>Video</h3><ul>
-<li><a href="/q/14.html" title="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.,2018-04-12 10:26:28"><p>Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.</p></a></li></ul>
-
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="https://zalalaa.com">Home</a>
-        <a href="/q/abouts/">About Us</a>
-        <a href="/q/patches/">Applique Patches</a>
-        <a href="/q/article/">Blog</a>
-        <a href="/q/video/">Video</a>
-        <a href="/q/contact/">Contact Us</a>
-      </div>
-    </nav>
+<meta name="theme-color" content="#32CD32">
+<link rel="stylesheet" href="/q/p.min.css">
+<link rel="stylesheet" href="/q/p.css">
+<script src="/q/j.min.js"></script>
+<script src="/q/pj.min.js"></script>
+</head>
+<body>
+<div class="navbar shadow" id="navbar">
+  <a class="navbar-logo size-big" href="https://zalalaa.com"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <div class="navbar-body" id="navbody">
+    <ul class="nav">
+      <li><a href="https://zalalaa.com" title="Home">Home</a></li>
+      <li><a href="/q/abouts/" title="About Us">About Us</a></li>
+      <li><a href="/q/patches/" title="Applique Patches">Applique Patches</a></li>
+      <li><a href="/q/article/" title="Blog">Blog</a></li>
+      <li><a href="/q/video/" title="Video">Video</a></li>
+      <li><a href="/q/contact/" title="Contact Us">Contact Us</a></li>
+    </ul>
   </div>
-</aside>
-<footer>
-  Made in <a href="https://zalalaa.com">Zalalaa.com</a>
-</footer>
+  <ul class="nav nav-switch size-mini" data-navswitch="#navbody"><li></li><li></li><li></li></ul>
+</div>
+<script>
+  $(function(){
+    $("#navbar").auto({
+      "0":{"class":"navbar shadow"},
+      "1024":{"class":"navbar navbar-head navbar-show shadow"},
+    });
+  })
+</script>
+<br />
+<div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
+    <div class="grid">
+       <div class="big-x2 small-x6"><a href="/q/crafts/" title="Crafts &amp; Sewing">Crafts &amp; Sewing <span class="badge">0</span></a></div> <div class="big-x2 small-x6"><a href="/q/sewing/" title="Sewing Products">Sewing Products <span class="badge">10</span></a></div> 
+    </div>
+</div>
+<div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
+  <h3 class="margin-bottom-mini weight" align="center">招贤纳士</h3>
+  <div class="grid big-grid-middle large-grid-large isplit-content">
+    <div class="big-x12 grid discovers">
+    </div>
+  </div>
+    <ul class="nav nav-page nav-divider">
+      <li><a href="javascript:;">Previous</a></li>
+      <li><a href="javascript:;">Next</a></li>
+    </ul>
+  
+</div>
+
+<div class="layout padding-top-large padding-bottom-large padding-left padding-right">
+  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>  
+</div>
+<script src="https://instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>
 </body>
 </html>
