--- a/q/patches/index.html
+++ b/q/patches/index.html
@@ -1,62 +1,144 @@
 <!doctype html>
 <html lang="en">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="renderer" content="webkit">
 <title>Applique Patches-Arts, Crafts &amp; Sewing-zlalaa</title>
+<meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/c.css">
-<header>
-  <a href="https://zalalaa.com">
-    <div><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="header__logo" /></div>
-    <h1>zalalaa<span>.</span>com</h1>
-  </a>
-</header>
-<main class="index">
-<h2>Applique Patches</h2>
-<h4></h4>
-<p>Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.</p>
-<div class="grid">
-	
-    <a href="/q/18.html" title="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57"><img src="/q/upload/other/20240626/1719391194190860.webp" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57"><p>Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing $:12.99</p></a><br />
-	
-    <a href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26"><img src="/q/upload/other/20240626/1719391022657043.webp" alt="Skull cloth patch,2024-06-10 21:33:26"><p>Skull cloth patch $:12</p></a><br />
-	
-    <a href="/q/13.html" title="Embroidery flower bud lace flower applique,2024-06-10 21:33:15"><img src="/q/upload/other/20240626/1719390770601289.webp" alt="Embroidery flower bud lace flower applique,2024-06-10 21:33:15"><p>Embroidery flower bud lace flower applique $:13.99</p></a><br />
-	
-    <a href="/q/11.html" title="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05"><img src="/q/upload/other/20240626/1719389747296309.webp" alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05"><p>Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace $:9.99</p></a><br />
-	
-    <a href="/q/22.html" title="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35"><img src="/q/upload/other/20240626/1719390299785042.webp" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35"><p>Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set $:12</p></a><br />
-	
-    <a href="/q/21.html" title="Tiger head Embroiderye sticker,2024-06-02 18:42:38"><img src="/q/upload/other/20240626/1719390626901068.webp" alt="Tiger head Embroiderye sticker,2024-06-02 18:42:38"><p>Tiger head Embroiderye sticker $:12</p></a><br />
-	
-    <a href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2018-04-12 10:23:07"><img src="https://p.upyun.com/demo/tmp/eE4AC71d.webp" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2018-04-12 10:23:07"><p>Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories $:12.99</p></a><br />
-	
-    <a href="/q/9.html" title="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2018-04-12 10:11:20"><img src="https://p.upyun.com/demo/tmp/GhctPHiT.webp" alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2018-04-12 10:11:20"><p>Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product $:9.99</p></a><br />
-	
+<meta name="theme-color" content="#32CD32">
+<link rel="stylesheet" href="/q/p.min.css">
+<link rel="stylesheet" href="/q/p.css">
+<script src="/q/j.min.js"></script>
+<script src="/q/pj.min.js"></script>
+</head>
+<body>
+<div class="navbar shadow" id="navbar">
+  <a class="navbar-logo size-big" href="https://zalalaa.com"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <div class="navbar-body" id="navbody">
+    <ul class="nav">
+      <li><a href="https://zalalaa.com" title="Home">Home</a></li>
+      <li><a href="/q/abouts/" title="About Us">About Us</a></li>
+      <li><a href="/q/patches/" title="Applique Patches">Applique Patches</a></li>
+      <li><a href="/q/article/" title="Blog">Blog</a></li>
+      <li><a href="/q/video/" title="Video">Video</a></li>
+      <li><a href="/q/contact/" title="Contact Us">Contact Us</a></li>
+    </ul>
   </div>
-<h3>Help</h3><ul>
-<li><a href="/q/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00"><p>Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</p></a></li><li><a href="/q/8.html" title="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.,2018-04-12 10:10:18"><p>Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</p></a></li></ul>
-<h3>Video</h3><ul>
-<li><a href="/q/14.html" title="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.,2018-04-12 10:26:28"><p>Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.</p></a></li></ul>
+  <ul class="nav nav-switch size-mini" data-navswitch="#navbody"><li></li><li></li><li></li></ul>
+</div>
+<script>
+  $(function(){
+    $("#navbar").auto({
+      "0":{"class":"navbar shadow"},
+      "1024":{"class":"navbar navbar-head navbar-show shadow"},
+    });
+  })
+</script>
+<br />
+<div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
+    <div class="grid">
+       <div class="big-x2 small-x6"><a href="/q/crafts/" title="Crafts &amp; Sewing">Crafts &amp; Sewing <span class="badge">0</span></a></div> <div class="big-x2 small-x6"><a href="/q/sewing/" title="Sewing Products">Sewing Products <span class="badge">10</span></a></div> 
+    </div>
+</div>
+<div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
+  <h3 class="margin-bottom-mini weight" align="center">Applique Patches</h3>
+  <div class="grid big-grid-middle large-grid-large isplit-content">
+    <div class="big-x12 grid discovers">
+      <a class="big-x3 flex flex-column" href="/q/18.html" title="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240626/1719391194190860.webp"  alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
+        <p class="size-small flex-grow">It will make your clothes look beautiful and unique, if you ··· <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240626/1719391022657043.webp"  alt="Skull cloth patch" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
+        <p class="size-small flex-grow">Your clothes can be so gorgeous  <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/13.html" title="Embroidery flower bud lace flower applique,2024-06-10 21:33:15">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240626/1719390770601289.webp"  alt="Embroidery flower bud lace flower applique" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:13.99</strong>
+        <p class="size-small flex-grow">Embroidery flower bud lace flower applique size: 30cm * 25cm··· <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/11.html" title="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240626/1719389747296309.webp"  alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
+        <p class="size-small flex-grow">Red, white and black car bone flower wedding headpiece lace ··· <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/22.html" title="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240626/1719390299785042.webp"  alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
+        <p class="size-small flex-grow">Clothing accessories, embroidery, lace cloth, computer embro··· <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/21.html" title="Tiger head Embroiderye sticker,2024-06-02 18:42:38">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240626/1719390626901068.webp"  alt="Tiger head Embroiderye sticker" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
+        <p class="size-small flex-grow">Tiger head embroidery sticker  <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/16.html" title="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set,2018-04-12 10:37:31">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="https://p.upyun.com/demo/tmp/KJPQMQdm.webp"  alt="Embroidered lace cover, floral cloth patch, large peony embroidered water-soluble set" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
+        <p class="size-small flex-grow">Embroidered lace cover, floral cloth patch, large peony embr··· <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/15.html" title="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2018-04-12 10:34:24">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="https://p.upyun.com/demo/tmp/tDqu761P.webp"  alt="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
+        <p class="size-small flex-grow">Embroidered water-soluble lace fabric, hand sewn cheongsam, ··· <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2018-04-12 10:23:07">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="https://p.upyun.com/demo/tmp/eE4AC71d.webp"  alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
+        <p class="size-small flex-grow">Embroidered clothing accessories, embroidered lace fabric, e··· <br />Read More</p>
+      </a>
+      <a class="big-x3 flex flex-column" href="/q/9.html" title="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product,2018-04-12 10:11:20">
+        <div class="overflow-hidden margin-bottom relative effect-hover">
+          <figure class="figure figure-above radius-big"><img src="https://p.upyun.com/demo/tmp/GhctPHiT.webp"  alt="Embroidered lace colored fabric with ethnic denim fabric patches for clothing accessories, water-soluble flower new product" class="img-auto scale" /> </figure>
+          <div class="effect-content"><i class="icon-add text-main"></i></div>
+        </div>
+        <strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
+        <p class="size-small flex-grow">Embroidered lace colored fabric with ethnic denim fabric pat··· <br />Read More</p>
+      </a>
+    </div>
+  </div>
+    <ul class="nav nav-page nav-divider">
+      <li><a href="javascript:;">Previous</a></li>
+      <li><a href="javascript:;">Next</a></li>
+    </ul>
+  
+</div>
 
-</main>
-<aside>
-  <div>
-    <nav aria-labelledby="nav-header">
-      <div>
-        <h2>Site navigation</h2>
-        <a class="active" href="https://zalalaa.com">Home</a>
-        <a href="/q/abouts/">About Us</a>
-        <a href="/q/patches/">Applique Patches</a>
-        <a href="/q/article/">Blog</a>
-        <a href="/q/video/">Video</a>
-        <a href="/q/contact/">Contact Us</a>
-      </div>
-    </nav>
-  </div>
-</aside>
-<footer>
-  Made in <a href="https://zalalaa.com">Zalalaa.com</a>
-</footer>
+<div class="layout padding-top-large padding-bottom-large padding-left padding-right">
+  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>  
+</div>
+<script src="https://instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>
 </body>
 </html>
