--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="theme-color" content="#32CD32">
 <link rel="stylesheet" href="/q/p.min.css">
 <link rel="stylesheet" href="/q/p.css">
-<script src="https://cdn.jsdelivr.net/gh/jquery/jquery@3.4.1/dist/jquery.min.js"></script>
+<script src="/q/j.min.js"></script>
 <script src="/q/pj.min.js"></script>
 </head>
 <body>
